--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "codemirror": "5.45.0",
     "core-js": "3.6.5",
     "driver.js": "0.9.5",
-    "echarts": "4.2.1",
+    "echarts": "^5.3.2",
     "element-ui": "2.13.2",
     "fuse.js": "3.4.4",
     "js-cookie": "2.2.0",
